adjusts styling to remove horizontal scroll and fix mobile view

--- a/src/components/PortfolioCard/PortfolioCard.css
+++ b/src/components/PortfolioCard/PortfolioCard.css
@@ -60,6 +60,10 @@
   .title {
     font-size: 10px;
   }
+
+  .container{
+    flex-direction: column;
+  }
 }
 
 .title {
