--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -106,6 +106,7 @@
     overflow-wrap: break-word;
   }
 
+
 }
 
 .pfp{
@@ -154,4 +155,8 @@ a:link {
 
 a:visited{
   color: #dfdbd8
+}
+
+.container{
+  max-width: 100%;
 }
